--- a/style.css
+++ b/style.css
@@ -1,37 +1,22 @@
-.calculator {
-    border: solid black 1px;
+.calcBody {
     height: 400px;
     width: 300px;
+    border: solid 1px black;
 }
+
 .display {
-    display: flex;
-    justify-content: flex-end;
     height: 50px;
     width: 300px;
-    border: solid black 1px;
-}
-.output {
-    margin-right: 20px;
+    border: solid 1px black;
 }
 
-.buttons {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 5px;
-}
-.button {
-    height: 65px;
-    width: 70px;
+button {
+    height: 60px;
+    width: 60px;
+    margin: 5px;
 }
 
-.AC {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 8px;
-}
 .clear {
-    height: 25px;
-    width: 200px;
+    height: 50px;
+    width: 280px;
 }
